# trinium-kernel

./: Cargo.toml  rust-toolchain.toml  x86_64-unknown-nunix-kernel.json  x86_64-unknown-trinium-kernel.json
.cargo/: config.toml
src/: main.rs  panic_handler.rs  pmm.rs  vmm.rs
src/bal/: hhdm.rs  mod.rs
src/bal/limine/: hhdm.rs  mod.rs
src/hal/: cpu.rs  interrupt.rs  irqlvmutex.rs  memory.rs  mod.rs  paging.rs
src/hal/sync/: irqlvmutex.rs  irqlvrwlock.rs  mod.rs
src/hal/x86_64/: cpu.rs  cpuid.rs  gdt.rs  interrupt.rs  memory.rs  mod.rs  paging.rs
src/sync/: lock_api.rs  mod.rs  rwspinlock.rs  spinlock.rs
